...
        android:paddingTop="10dp"
        android:orientation="horizontal"
        android:background="@color/color_primary"
        >

        <CheckBox
            android:id="@+id/checkbox"
            android:buttonTint="@color/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
...
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/button_menu"
            android:shape="rectangle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
...
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal"
        android:background="@color/button_alt_background_color">

        <android.widget.Button
            android:id="@+id/button_focus"
            android:shape="rectangle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
...
            style="?android:borderlessButtonStyle"
            android:drawableTop="@drawable/ic_action_edit"
            android:background="@drawable/button_alt"
            />

        <android.widget.Button
            android:id="@+id/button_calendar"
            android:shape="rectangle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
...
            android:paddingTop="@dimen/button_alt_offset"
            style="?android:borderlessButtonStyle"
            android:drawableTop="@drawable/ic_action_recurrence"
            android:background="@drawable/button_alt"
            />
        <android.widget.Button
            android:id="@+id/button_list"
            android:shape="rectangle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
...
            android:paddingTop="@dimen/button_alt_offset"
            style="?android:borderlessButtonStyle"
            android:drawableTop="@drawable/ic_action_clear"
            android:backgroundTint="@color/white"
            />
        <android.widget.Button
            android:id="@+id/button_back_list"
            android:shape="rectangle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
...
