...
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="@dimen/toolbar_height"
           android:background="@color/color_primary">

           <android.widget.Button
               android:id="@+id/toolbar_pick"
               android:text="@string/pickButton"
               android:shape="rectangle"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_marginLeft="0dp"
               android:layout_marginRight="0dp"
...
               android:layout_gravity="center"
               style="?android:borderlessButtonStyle"
               android:drawableTop="@drawable/ic_action_pick"
               />

           <android.widget.Button
               android:id="@+id/toolbar_focus"
               android:text="@string/focusButton"
               android:shape="rectangle"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_marginLeft="0dp"
               android:layout_marginRight="0dp"
...
               android:layout_gravity="center"
               style="?android:borderlessButtonStyle"
               android:drawableTop="@drawable/ic_action_focus_toolbar"
               />

           <android.widget.Button
               android:id="@+id/toolbar_drop"
               android:text="@string/dropButton"
               android:shape="rectangle"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_marginLeft="0dp"
               android:layout_marginRight="0dp"
...
               style="?android:borderlessButtonStyle"
               android:drawableTop="@drawable/ic_action_drop"
               />


           <android.widget.Button
               android:id="@+id/toolbar_lists"
               android:text="@string/listsButton"
               android:shape="rectangle"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_marginLeft="0dp"
               android:layout_marginRight="0dp"
...
