<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/layout_drop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"/>


        <EditText
            android:id="@+id/edit_text_drop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_task" />
        <Button
            android:id="@+id/button_drop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drop"
            android:backgroundTint="@color/color_primary_accent"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_view_drop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>